0.04
 - Remove trailing whitespace.
 - Update copyright years.

0.03 2015-09-07T10:47:50+02:00
 - Add readme_from directive to Makefile.PL.
 - Fix LICENSE file.
 - Improve SEE ALSO section in doc.
 - Update Module::Install to 1.16 version.
 - Update LICENSE AND COPYRIGHT section in doc to my standard.

0.02 2014-08-13T09:44:48+02:00
 - Add minimum version of Perl.
 - Add tests for constructor.
 - Add tests for get() method.

0.01 2014-08-04T23:49:35+02:00
 - First version.